tests/baselines/reference/computedPropertyNamesWithTypeOfOperator.errors.txt
tests/cases/compiler/computedPropertyNamesWithTypeOfOperator.ts(11,34): error TS1167: Computed property names can only be named with well-known symbols without the 'typeof' operator. Try replacing 'typeof [object Object]' with '[object Object]'.
tests/cases/compiler/computedPropertyNamesWithTypeOfOperator.ts(11,42): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
tests/cases/compiler/computedPropertyNamesWithTypeOfOperator.ts(13,35): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.


==== tests/cases/compiler/computedPropertyNamesWithTypeOfOperator.ts (3 errors) ====
    interface SymbolConstructor {
      observable: symbol;
    }
    
    type Observer<T> = (x: T) => void;
    
    interface Observable<T> {
      subscribe(observer: Observer<T>): { unsubscribe(): void }
    }
    
    declare function from1<T>(obj: { [typeof Symbol.observable](): Observable<T> }): Observable<T>;
                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1167: Computed property names can only be named with well-known symbols without the 'typeof' operator. Try replacing 'typeof [object Object]' with '[object Object]'.
                                             ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    //                               ^^^^^^ Look at this use of 'typeof'.
    declare function from2<T>(obj: { [Symbol.observable](): Observable<T> }): Observable<T>;
                                      ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the `lib` compiler option to es2015 or later.
    